@@ -29,8 +29,9 @@ package org.hisp.dhis.analytics.event.data;
 
 import static java.util.Collections.emptyList;
 import static java.util.Optional.empty;
-import static java.util.stream.Collectors.toList;
+import static java.util.stream.Collectors.*;
 import static org.apache.commons.collections4.CollectionUtils.isNotEmpty;
+import static org.apache.commons.lang3.StringUtils.EMPTY;
 import static org.apache.commons.lang3.StringUtils.joinWith;
 import static org.hisp.dhis.analytics.AnalyticsMetaDataKey.DIMENSIONS;
 import static org.hisp.dhis.analytics.AnalyticsMetaDataKey.ITEMS;
@@ -62,10 +63,12 @@ import java.util.Set;
 import java.util.TreeMap;
 import lombok.RequiredArgsConstructor;
 import org.hisp.dhis.analytics.AnalyticsSecurityManager;
+import org.hisp.dhis.analytics.common.processing.MetadataItemsHandler;
 import org.hisp.dhis.analytics.data.handler.SchemeIdResponseMapper;
 import org.hisp.dhis.analytics.event.EventQueryParams;
 import org.hisp.dhis.analytics.event.EventQueryValidator;
 import org.hisp.dhis.analytics.orgunit.OrgUnitHelper;
+import org.hisp.dhis.analytics.util.AnalyticsOrganisationUnitUtils;
 import org.hisp.dhis.analytics.util.AnalyticsUtils;
 import org.hisp.dhis.calendar.Calendar;
 import org.hisp.dhis.common.DimensionItemKeywords;
@@ -86,6 +89,7 @@ import org.hisp.dhis.common.ValueType;
 import org.hisp.dhis.option.Option;
 import org.hisp.dhis.organisationunit.OrganisationUnit;
 import org.hisp.dhis.period.PeriodType;
+import org.hisp.dhis.user.CurrentUserService;
 import org.hisp.dhis.user.User;
 
 /**
@@ -98,6 +102,8 @@ public abstract class AbstractAnalyticsService {
   protected final EventQueryValidator queryValidator;
 
   protected final SchemeIdResponseMapper schemeIdResponseMapper;
+
+  private final CurrentUserService currentUserService;
 
   /**
    * Returns a grid based on the given query.
@@ -127,6 +133,8 @@ public abstract class AbstractAnalyticsService {
             .flatMap(dk -> dk.getKeywords().stream())
             .collect(toList());
 
+    List<DimensionalObject> periods = getPeriods(params);
+
     params = new EventQueryParams.Builder(params).withStartEndDatesForPeriods().build();
 
     // ---------------------------------------------------------------------
@@ -145,6 +153,21 @@ public abstract class AbstractAnalyticsService {
               true));
     }
 
+    for (DimensionalObject dimension : periods) {
+      grid.addHeader(
+          new GridHeader(
+              dimension.getDimension(),
+              dimension.getDimensionDisplayName(),
+              ValueType.TEXT,
+              false,
+              true));
+    }
+
+    final DisplayProperty displayProperty = params.getDisplayProperty();
+    Map<String, Long> repeatedNames =
+        params.getItems().stream()
+            .collect(groupingBy(s -> s.getItem().getDisplayProperty(displayProperty), counting()));
+
     for (QueryItem item : params.getItems()) {
       /**
        * If the request contains an item of value type ORGANISATION_UNIT and the item UID is linked
@@ -157,14 +180,15 @@ public abstract class AbstractAnalyticsService {
         grid.addHeader(
             new GridHeader(
                 item.getItem().getUid(),
-                item.getItem().getDisplayProperty(params.getDisplayProperty()),
+                item.getItem().getDisplayProperty(displayProperty),
                 COORDINATE,
                 false,
                 true,
                 item.getOptionSet(),
                 item.getLegendSet()));
       } else if (item.hasNonDefaultRepeatableProgramStageOffset()) {
-        String column = item.getItem().getDisplayProperty(params.getDisplayProperty());
+        String column = item.getItem().getDisplayProperty(displayProperty);
+        String displayColumn = item.getColumnName(displayProperty, repeatedNames.get(column) > 1);
 
         RepeatableStageParams repeatableStageParams = item.getRepeatableStageParams();
 
@@ -174,6 +198,7 @@ public abstract class AbstractAnalyticsService {
             new GridHeader(
                 name,
                 column,
+                displayColumn,
                 repeatableStageParams.simpleStageValueExpected()
                     ? item.getValueType()
                     : ValueType.REFERENCE,
@@ -185,13 +210,14 @@ public abstract class AbstractAnalyticsService {
                 item.getRepeatableStageParams()));
       } else {
         String uid = getItemUid(item);
-
-        String column = item.getItem().getDisplayProperty(params.getDisplayProperty());
+        String column = item.getItem().getDisplayProperty(displayProperty);
+        String displayColumn = item.getColumnName(displayProperty, repeatedNames.get(column) > 1);
 
         grid.addHeader(
             new GridHeader(
                 uid,
                 column,
+                displayColumn,
                 item.getValueType(),
                 false,
                 true,
@@ -207,7 +233,13 @@ public abstract class AbstractAnalyticsService {
     long count = 0;
 
     if (!params.isSkipData() || params.analyzeOnly()) {
-      count = addEventData(grid, params);
+      if (!periods.isEmpty()) {
+        params =
+            new EventQueryParams.Builder(params)
+                .withPeriods(periods.stream().flatMap(p -> p.getItems().stream()).toList(), EMPTY)
+                .build();
+      }
+      count = addData(grid, params);
     }
 
     // ---------------------------------------------------------------------
@@ -314,7 +346,7 @@ public abstract class AbstractAnalyticsService {
 
   protected abstract Grid createGridWithHeaders(EventQueryParams params);
 
-  protected abstract long addEventData(Grid grid, EventQueryParams params);
+  protected abstract long addData(Grid grid, EventQueryParams params);
 
   /**
    * Applies headers to the given if the given query specifies headers.
@@ -355,20 +387,28 @@ public abstract class AbstractAnalyticsService {
 
       if (hasResults) {
         optionItems.addAll(
-            optionsPresentInGrid.values().stream()
-                .flatMap(Collection::stream)
-                .distinct()
-                .collect(toList()));
+            optionsPresentInGrid.values().stream().flatMap(Collection::stream).distinct().toList());
       } else {
         optionItems.addAll(getItemOptionsAsFilter(params.getItemOptions(), params.getItems()));
       }
 
+      Map<String, Object> items = new HashMap<>();
+      AnalyticsOrganisationUnitUtils.getUserOrganisationUnitItems(
+              currentUserService.getCurrentUser(), params.getUserOrganisationUnitsCriteria())
+          .forEach(items::putAll);
+
       if (params.isComingFromQuery()) {
-        metadata.put(ITEMS.getKey(), getMetadataItems(params, periodKeywords, optionItems, grid));
+        items.putAll(getMetadataItems(params, periodKeywords, optionItems, grid));
+      } else {
+        items.putAll(getMetadataItems(params));
+      }
+
+      metadata.put(ITEMS.getKey(), items);
+
+      if (params.isComingFromQuery()) {
         metadata.put(
             DIMENSIONS.getKey(), getDimensionItems(params, Optional.of(optionsPresentInGrid)));
       } else {
-        metadata.put(ITEMS.getKey(), getMetadataItems(params));
         metadata.put(DIMENSIONS.getKey(), getDimensionItems(params, empty()));
       }
 
@@ -591,6 +631,8 @@ public abstract class AbstractAnalyticsService {
                     option.getDisplayProperty(params.getDisplayProperty()),
                     includeDetails ? option.getUid() : null,
                     option.getCode())));
+
+    new MetadataItemsHandler().addOptionsSetIntoMap(metadataItemMap, itemOptions);
   }
 
   /**
@@ -680,5 +722,15 @@ public abstract class AbstractAnalyticsService {
     }
 
     return dimensionUids;
+  }
+
+  /**
+   * retrieve all periods as list of dimensional objects
+   *
+   * @param params
+   * @return {@link EventQueryParams} object
+   */
+  protected List<DimensionalObject> getPeriods(EventQueryParams params) {
+    return List.of();
   }
 }
